# sighmake

./: .gitignore  GenerateMakefiles.bat  GenerateSolution.bat  LICENSE  README.md  build.bat  generate_linux.sh  generate_macos.sh  install.bat  install.sh  release.bat  release.sh  sighmake  sighmake.buildscript  sighmake_macos  usage.md
.github/workflows/: ci.yml
docs/: BUILD.md
editors/vscode/: README.md  language-configuration.json  package-lock.json  package.json
examples/: README.md  common_settings.buildscript  multi_project.buildscript
examples/Multi Project Example/: GenerateSample.bat  include_example.buildscript  multi_project.buildscript
examples/calculator/: main.cpp
examples/mathlib/: mathlib.h
sighmake/: Makefile.Debug  Makefile.Release
src/: buildscript_parser.cpp  buildscript_parser.hpp  config.hpp  generator.hpp  main.cpp  pch.h  project_types.hpp  pugiconfig.hpp  vcxproj_generator.cpp  vcxproj_generator.hpp  vcxproj_reader.cpp  vcxproj_reader.hpp  version.hpp
test_cmake/: CMakeLists.txt
test_cmake/miniaudio/: CMakeLists.txt  miniaudio.c  miniaudio.h
tests/: test_buildscript_generator.cpp  test_buildscript_parser.cpp  test_buildscript_writer.cpp  test_cmake_generator.cpp  test_cmake_parser.cpp  test_dependency_propagation.cpp  test_deps_exporter.cpp  test_generator_factory.cpp  test_integration.cpp  test_makefile_generator.cpp  test_project_types.cpp  test_toolset_registry.cpp  test_updater.cpp  test_vcproj_reader.cpp  test_vcxproj_generator.cpp  test_vcxproj_reader.cpp  test_vpc_parser.cpp  tests.buildscript
(+48 files in other folders)
